@@ -1,21 +1,21 @@
-# $NetBSD: Makefile,v 1.6 2019/04/07 13:04:10 wen Exp $
+# $NetBSD: Makefile,v 1.7 2019/07/31 15:35:44 brook Exp $
 
-CATEGORIES=	devel
+CATEGORIES=	devel R
 
 MAINTAINER=	minskim@NetBSD.org
 HOMEPAGE=	${R_HOMEPAGE_BASE}/repr/
 COMMENT=	Serializable representations
 LICENSE=	gnu-gpl-v3
 
-DEPENDS+=	R-htmltools-[0-9]*:../../textproc/R-htmltools
-DEPENDS+=	R-base64enc-[0-9]*:../../converters/R-base64enc
-DEPENDS+=	R-jsonlite>=0:../../textproc/R-jsonlite
-
 R_PKGNAME=	repr
-R_PKGVER=	0.19.2
+R_PKGVER=	1.0.1
+
+DEPENDS+=	R-base64enc>=0.1.3:../../converters/R-base64enc
+DEPENDS+=	R-pillar>=1.4.0:../../misc/R-pillar
+DEPENDS+=	R-htmltools>=0.3.6:../../textproc/R-htmltools
+DEPENDS+=	R-jsonlite>=1.6:../../textproc/R-jsonlite
 
 USE_LANGUAGES=	# none
 
-BUILDLINK_API_DEPENDS.R+=	R>=3.0.1
 .include "../../math/R/Makefile.extension"
 .include "../../mk/bsd.pkg.mk"
